[gd_scene load_steps=5 format=3 uid="uid://6fx6p4j2fcbl"]

[ext_resource type="Script" uid="uid://dtghej3v5om2l" path="res://lever.gd" id="1_ncfea"]
[ext_resource type="Texture2D" uid="uid://jstttmc0bkbq" path="res://assets/lever.png" id="2_qxmkn"]
[ext_resource type="Theme" uid="uid://bftts3ali82xb" path="res://assets/themes/main_theme.tres" id="3_qxmkn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8di2w"]
radius = 420.144

[node name="lever" type="Node2D"]
script = ExtResource("1_ncfea")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_8di2w")

[node name="Lever" type="Sprite2D" parent="."]
position = Vector2(8, -127)
texture = ExtResource("2_qxmkn")

[node name="Node" type="Node" parent="."]

[node name="Label3" type="Label" parent="Node"]
offset_left = 129.0
offset_top = -1044.0
offset_right = 2628.0
offset_bottom = -222.0
theme = ExtResource("3_qxmkn")
theme_override_colors/font_color = Color(0.880962, 0.412937, 1, 1)
theme_override_font_sizes/font_size = 128
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
